Code rewrite: Parsing
* Use gradle 7.5.1 and JDK 18
* Refactor package names
* Use immutable records for representing iTunes objects
* Add missing keys for library
* Move logic out of builder classes
* New comparators (using `thenComparing`) using lexicographic sorting