@@ -1,15 +1,31 @@
+/*
+ * Copyright 2014-2022 Sebastian Muskalla
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 package iexport.tasks.print;
 
-import iexport.domain.Library;
-import iexport.domain.Playlist;
-import iexport.domain.Track;
+import iexport.itunes.Library;
+import iexport.itunes.Playlist;
+import iexport.itunes.Track;
 import iexport.tasks.common.Task;
 import iexport.tasks.common.TaskSettings;
 
 import java.io.PrintStream;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 
 public class LibraryPrinter extends Task
@@ -27,28 +43,34 @@ public class LibraryPrinter extends Task
     }
 
     @Override
-    public String getShorthand() {
+    public String getShorthand ()
+    {
         return SHORTHAND;
     }
-
 
     public void run ()
     {
         out.println(library.toString());
-        for (Playlist p : library.getPlaylistsAtTopLevel())
+
+        for (Playlist playlist : library.playlists())
         {
-            printPlaylist(p);
+            System.out.println(ancestryToString(playlist) + "    " + playlist);
         }
 
-        out.println();
-        out.println("---------------------------------");
-        out.println();
+//        for (Playlist p : library.playlistsAtTopLevel())
+//        {
+//            printPlaylist(p);
+//        }
 
-        out.println("Tracks that are in no playlist");
+//        out.println();
+//        out.println("---------------------------------");
+//        out.println();
+//
+//        out.println("Tracks that are in no playlist");
 
-        List<Track> tracksWithoutPlaylist = library.getTracks().stream().filter(t -> t.getInPlaylists().isEmpty()).collect(Collectors.toList());
-
-        tracksWithoutPlaylist.forEach(out::println);
+//        List<Track> tracksWithoutPlaylist = library.tracks().stream().filter(t -> t.inPlaylists().isEmpty()).collect(Collectors.toList());
+//
+//        tracksWithoutPlaylist.forEach(out::println);
 
         out.println();
         out.println("---------------------------------");
@@ -56,22 +78,27 @@ public class LibraryPrinter extends Task
 
         out.println("Tracks that are in multiple playlists");
 
-        Predicate<Playlist> playlistPredicate = p -> p.getDistinguishedKind() == null && (p.getMaster() == null || !p.getMaster()) && p.getChildren().isEmpty() && !p.getName().equals("NEUES");
-        List<Track> tracksInMultiplePlayslists = library.getTracks().stream().filter
+        Predicate<Playlist> playlistPredicate = p -> p.distinguishedKind() == null && (p.master() == null || !p.master()) && p.children().isEmpty() && !p.name().equals("NEUES");
+        List<Track> tracksInMultiplePlayslists = library.tracks().stream().filter
                 (
-                        t -> t.getInPlaylists().stream().filter(playlistPredicate).count() > 1
-                ).collect(Collectors.toList());
+                        t -> t.inPlaylists().stream().filter(playlistPredicate).count() > 1
+                ).toList();
 
         tracksInMultiplePlayslists.forEach(
-                    t -> {
-                        out.print(t);
-                        out.print(" ( ");
-                        t.getInPlaylists().stream().filter(playlistPredicate).forEach(p -> out.print(p + " , "));
-                        out.println(" ) ");
-                    }
+                t -> {
+                    out.print(t);
+                    out.print(" ( ");
+                    t.inPlaylists().stream().filter(playlistPredicate).forEach(p -> out.print(p + " , "));
+                    out.println(" ) ");
+                }
         );
 
 
+    }
+
+    private String ancestryToString (Playlist playlist)
+    {
+        return playlist.ancestry().stream().reduce("", (s, playlist1) -> s + "/" + playlist1.name(), String::concat);
     }
 
     private void printPlaylist (Playlist p)
@@ -88,7 +115,7 @@ public class LibraryPrinter extends Task
             indent += "    ";
         }
         out.println(indent + p);
-        for (Playlist subplaylist : p.getChildren())
+        for (Playlist subplaylist : p.children())
         {
             printPlaylist(subplaylist, indentLevel + 1);
         }
